Update from templates-project-lib

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -3,21 +3,21 @@
 ###########################
 
 # Project information
-site_name:  Library
-site_url: 
+site_name: EasyPeasy Library
+site_url: https://easyscience.github.io/peasy-lib
 
 # Repository
 repo_url: https://github.com/easyscience/peasy-lib
 edit_uri: edit/develop/docs/
 
 # Copyright
-copyright: ©  
+copyright: © 2025 EasyPeasy
 
 # Extra icons in the bottom right corner
 extra:
   social:
-    #- icon: easydiffraction  # File: overrides/.icons/easydiffraction.svg
-    #  link: https://easydiffraction.org
+    - icon: easypeasy  # File: overrides/.icons/easypeasy.svg
+      link: https://easypeasy.org
     - icon: fontawesome/brands/github  # Name as in Font Awesome
       link: https://github.com/easyscience/peasy-lib
 
