--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,9 @@ classifiers = [
       "Programming Language :: Python :: 3.10",
       "Programming Language :: Python :: 3.11",
       "Programming Language :: Python :: 3.12",
+      "Programming Language :: Python :: 3.13",
 ]
-requires-python = '>=3.9,<=3.12'
+requires-python = '>=3.9,<=3.13'
 dependencies = [
   'easyscience',         # The base library of the EasyScience framework
   'pooch',               # Data downloader
