copier update --answers-file=.copier-answers.project-lib.yml

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -3,29 +3,25 @@
 ###########################
 
 # Project information
-site_name: EasyPeasy Library
-site_url: https://easyscience.github.io/peasy-lib
+site_name:  Library
+site_url: 
 
 # Repository
-repo_url: https://github.com/easyscience/peasy-lib
+repo_url: https://github.com/easyscience/
 edit_uri: edit/develop/docs/
 
 # Copyright
-copyright: © 2025 EasyPeasy
+copyright: ©  
 
 # Extra icons in the bottom right corner
 extra:
   social:
-    - icon: easypeasy  # File: overrides/.icons/easypeasy.svg
-      link: https://easypeasy.org
+    - icon:   # File: overrides/.icons/.svg
+      link: 
+      name:  Main Webpage
     - icon: fontawesome/brands/github  # Name as in Font Awesome
-      link: https://github.com/easyscience/peasy-lib
-
-# Jupyter notebooks
-plugins:
-  - mkdocs-jupyter:
-      execute_ignore:
-        - '*emcee*.ipynb' # Ignore notebooks with 'emcee' in the name from execution
+      link: https://github.com/easyscience/
+      name:  Library Source Code on GitHub
 
 ##################
 # Add new settings
@@ -34,33 +30,24 @@ plugins:
 # Exclude files and folders from the global navigation
 not_in_nav: |
   index.md
-  usage/dictionaries
+  user-guide/parameters
 
 # Format and layout of the global navigation for the site
 nav:
   - Introduction:
       - Introduction: introduction/index.md
   - Installation & Setup:
-      - Installation & Setup: installation/index.md
+      - Installation & Setup: installation-and-setup/index.md
   - User Guide:
-      - User Guide: usage/index.md
-      - Terminology: usage/terminology.md
-      - Getting Started: usage/getting-started.md
-      - Workflow Steps:
-        - Workflow Steps: usage/workflow-steps/index.md
-        - Project: usage/workflow-steps/project.md
-        - Model: usage/workflow-steps/model.md
-        - Experiment: usage/workflow-steps/experiment.md
-        - Analysis: usage/workflow-steps/analysis.md
-        - Summary: usage/workflow-steps/summary.md
-  - Hands-on Tutorials:
-      - Hands-on Tutorials: tutorials/index.md
-      - Basic Examples: []
-      - Simulation: []
-      - Fitting: []
-      - Advanced fitting: []
-      - Additional examples: []
+      - User Guide: user-guide/index.md
+      - Analysis Workflow:
+        - Analysis Workflow: user-guide/analysis-workflow/index.md
+        - Project: user-guide/analysis-workflow/project.md
+        - Sample Model: user-guide/analysis-workflow/model.md
+        - Experiment: user-guide/analysis-workflow/experiment.md
+        - Analysis: user-guide/analysis-workflow/analysis.md
+        - Summary: user-guide/analysis-workflow/summary.md
+  - Tutorials:
+      - Tutorials: tutorials/index.md
   - API Reference:
-      - API Reference: api/index.md
-  - Contributing:
-      - Contributing: contributing/index.md
+      - API Reference: api-reference-reference/index.md
