--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -4,7 +4,7 @@ on:
   # Trigger the workflow on push
   push:
     # To the develop and master branches
-    branches: [develop, master]
+    branches: [develop, master, docs]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -31,12 +31,12 @@ jobs:
       - name: Get GitHub repository
         run: echo "GITHUB_REPOSITORY=$GITHUB_REPOSITORY" >> $GITHUB_ENV
 
-      # Save the latest release version of easyscience/peasy-lib to RELEASE_VERSION
+      # Save the latest release version of easyscience/ to RELEASE_VERSION
       # RELEASE_VERSION is used in the mkdocs.yml file to set release_version.
       # The release_version is then needed to display the latest release version in the index.md file
-      - name: Get the latest release version of EasyPeasy Library
+      - name: Get the latest release version of  Library
         run: |
-          git clone --depth 1 https://github.com/easyscience/peasy-lib .
+          git clone --depth 1 https://github.com/easyscience/ .
           git fetch --tags
           echo "RELEASE_VERSION=$(git describe --tags --abbrev=0)" >> $GITHUB_ENV
 
@@ -62,9 +62,9 @@ jobs:
       - name: Upgrade package installer for Python
         run: python -m pip install --upgrade pip
 
-      # Install EasyPeasy Library to run Jupyter notebooks
+      # Install  Library to run Jupyter notebooks
       # Install with the 'charts' and 'docs' extras
-      - name: Install EasyPeasy Library and its dependencies
+      - name: Install  Library and its dependencies
         run: pip install '.[charts,docs]'
 
       # Clone assets extra from:
@@ -86,14 +86,15 @@ jobs:
       # Add the extra files from the easyscience/assets-branding repository
       - name: Add files from easyscience/assets-branding files
         run: |
+
           mkdir -p docs/assets/images/
-          cp ../assets-branding/easypeasy/hero/dark.png docs/assets/images/hero_dark.png
-          cp ../assets-branding/easypeasy/hero/light.png docs/assets/images/hero_light.png
-          cp ../assets-branding/easypeasy/logos/dark.svg docs/assets/images/logo_dark.svg
-          cp ../assets-branding/easypeasy/logos/light.svg docs/assets/images/logo_light.svg
-          cp ../assets-branding/easypeasy/icons/color.png docs/assets/images/favicon.png
+          cp ../assets-branding//hero/dark.png docs/assets/images/hero_dark.png
+          cp ../assets-branding//hero/light.png docs/assets/images/hero_light.png
+          cp ../assets-branding//logos/dark.svg docs/assets/images/logo_dark.svg
+          cp ../assets-branding//logos/light.svg docs/assets/images/logo_light.svg
+          cp ../assets-branding//icons/color.png docs/assets/images/favicon.png
           mkdir -p overrides/.icons/
-          cp ../assets-branding/easypeasy/icons/bw.svg overrides/.icons/easypeasy.svg
+          cp ../assets-branding//icons/bw.svg overrides/.icons/.svg
           cp ../assets-branding/easyscience-org/icons/eso-icon_bw.svg overrides/.icons/easyscience.svg
 
       # Copy Jupyter notebooks from the project to the docs folder
@@ -123,7 +124,7 @@ jobs:
 
       # Set up the Pages action to configure the static files to be deployed
       # NOTE: The repository must have GitHub Pages enabled and configured to build using GitHub Actions
-      # This can be done via https://github.com/easyscience/peasy-lib/settings/pages
+      # This can be done via https://github.com/easyscience//settings/pages
       # Select: Build and deploy - Source - GitHub Actions
       - name: Setup GitHub Pages
         uses: actions/configure-pages@v5
@@ -134,7 +135,7 @@ jobs:
       # Unfortunately, the artifact is not available for download, so extra steps below are needed to do similar things
       - name:
           Upload built site as artifact for
-          easyscience.github.io/peasy-lib (all branches)
+          easyscience.github.io/ (all branches)
         uses: actions/upload-pages-artifact@v3
         with:
           path: site/
@@ -179,10 +180,10 @@ jobs:
       # Deploy the static files created in the previous job to GitHub Pages
       # To allow the deployment of the static files to GitHub Pages, no
       # restrictions on the branch name need to be set for desired branches on
-      # https://github.com/easyscience/peasy-lib/settings/environments
+      # https://github.com/easyscience//settings/environments
       # Currently, only develop and master branches are allowed to deploy to GitHub Pages
-      # Deployed pages are available at https://easyscience.github.io/peasy-lib
-      - name: Deploy to easyscience.github.io/peasy-lib (all branches)
+      # Deployed pages are available at https://easyscience.github.io/
+      - name: Deploy to easyscience.github.io/ (all branches)
         uses: actions/deploy-pages@v4
 
       # Download built site as artifact from a previous job for gh_pages (master branch)
@@ -196,10 +197,10 @@ jobs:
       # Push the site files created in the previous job to the gh_pages branch
       # To be able to push to the gh_pages branch, the personal GitHub API access
       # token GH_API_PERSONAL_ACCSESS_TOKEN must be set for this repository via
-      # https://github.com/easyscience/peasy-lib/settings/secrets/actions
+      # https://github.com/easyscience//settings/secrets/actions
       # This branch is used to deploy the site to the custom domain.
       # Deploying is done with a webhook:
-      # https://github.com/easyscience/peasy-lib/settings/hooks
+      # https://github.com/easyscience//settings/hooks
       # This is done for the gh_pages branch when the site is tested with a step above
       - name:
           Deploy to gh_pages branch to trigger deployment to custom domain (master branch)
