Correct API reference path

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -171,4 +171,4 @@ nav:
   - Tutorials:
       - Tutorials: tutorials/index.md
   - API Reference:
-      - API Reference: api-reference-reference/index.md
+      - API Reference: api-reference/index.md
