--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -100,13 +100,13 @@ markdown_extensions:
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
       options:
         custom_icons:
-          - overrides/.icons
+          - docs/overrides/.icons
   - pymdownx.highlight: # whether highlighting should be carried out during build time by Pygments
       use_pygments: true
       pygments_lang_class: true
   - pymdownx.snippets:
       auto_append:
-        - includes/abbreviations.md
+        - docs/includes/abbreviations.md
   - pymdownx.superfences: # whether highlighting should be carried out during build time by Pygments
       custom_fences:
         - name: mermaid
