--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -42,11 +42,11 @@ env:
   # For tags: github.ref_name is the tag name
   # GITHUB_REPOSITORY - the repository name (used in mkdocs.yml)
   # NOTEBOOKS_DIR - the directory containing the Jupyter notebooks (used in mkdocs.yml)
-  DEFAULT_BRANCH: $${{ github.event.repository.default_branch }}
+  DEFAULT_BRANCH: ${{ github.event.repository.default_branch }}
   DEVELOP_BRANCH: develop
-  CI_BRANCH: $${{ github.head_ref || github.ref_name }}
-  IS_RELEASE_TAG: $${{ startsWith(github.ref, 'refs/tags/v') }}
-  GITHUB_REPOSITORY: $${{ github.repository }}
+  CI_BRANCH: ${{ github.head_ref || github.ref_name }}
+  IS_RELEASE_TAG: ${{ startsWith(github.ref, 'refs/tags/v') }}
+  GITHUB_REPOSITORY: ${{ github.repository }}
   NOTEBOOKS_DIR: tutorials
 
 jobs:
@@ -57,7 +57,7 @@ jobs:
       matrix:
         os: [macos-latest]
 
-    runs-on: $${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
 
     permissions:
       contents: write # Required for pushing to the gh-pages branch
@@ -83,22 +83,22 @@ jobs:
           fi
           echo "RELEASE_VERSION=${RELEASE_VERSION}" >> "$GITHUB_ENV"
           echo "DOCS_VERSION=${DOCS_VERSION}" >> "$GITHUB_ENV"
-          echo "DEPLOYMENT_URL=https://easyscience.github.io/$${{ github.event.repository.name }}/${DOCS_VERSION}" >> "$GITHUB_ENV"
+          echo "DEPLOYMENT_URL=https://easyscience.github.io/${{ github.event.repository.name }}/${DOCS_VERSION}" >> "$GITHUB_ENV"
 
       # Create GitHub App token for pushing to gh-pages as easyscience[bot].
       - name: Create GitHub App installation token
         id: app-token
         uses: actions/create-github-app-token@v2
         with:
-          app-id: $${{ vars.EASYSCIENCE_APP_ID }}
-          private-key: $${{ secrets.EASYSCIENCE_APP_KEY }}
+          app-id: ${{ vars.EASYSCIENCE_APP_ID }}
+          private-key: ${{ secrets.EASYSCIENCE_APP_KEY }}
 
       # Check out the repository source code.
       # Note: The gh-pages branch is fetched separately later for mike deployment.
       - name: Check-out repository
         uses: actions/checkout@v5
         with:
-          token: $${{ steps.app-token.outputs.token }}
+          token: ${{ steps.app-token.outputs.token }}
 
       # Activate dark mode to create documentation with Plotly charts in dark mode
       # Need a better solution to automatically switch the chart colour theme based on the mkdocs material switcher
@@ -181,7 +181,7 @@ jobs:
       - name: Upload built site as artifact
         uses: actions/upload-artifact@v4
         with:
-          name: site-local_${{ project_name | lower }}-lib-$${{ env.RELEASE_VERSION }}
+          name: site-local_easypeasy-lib-${{ env.RELEASE_VERSION }}
           path: site/
           if-no-files-found: 'error'
           compression-level: 0
@@ -190,7 +190,7 @@ jobs:
       - name: Configure git for pushing
         run: |
           git config user.name "easyscience[bot]"
-          git config user.email "$${{ vars.EASYSCIENCE_APP_ID }}+easyscience[bot]@users.noreply.github.com"
+          git config user.email "${{ vars.EASYSCIENCE_APP_ID }}+easyscience[bot]@users.noreply.github.com"
 
       # Fetch the gh-pages branch to ensure mike has the latest remote state.
       # This is required because the checkout step only fetches the source branch,
@@ -212,4 +212,4 @@ jobs:
             pixi run docs-deploy dev
           fi
           pixi run docs-set-default latest
-          echo "🔗 deployment url [$${{ env.DEPLOYMENT_URL }}]($${{ env.DEPLOYMENT_URL }})" >> $GITHUB_STEP_SUMMARY
+          echo "🔗 deployment url [${{ env.DEPLOYMENT_URL }}](${{ env.DEPLOYMENT_URL }})" >> $GITHUB_STEP_SUMMARY
