Update docs deployment config

--- a/pixi.toml
+++ b/pixi.toml
@@ -179,8 +179,8 @@ docs-serve-dirty = "pixi run docs-serve --dirty"
 docs-build = "pixi run docs-pre build -f docs/mkdocs.yml"
 docs-build-local = "pixi run docs-build --no-directory-urls"
 
-docs-deploy = 'mike deploy --push --branch gh-pages --update-aliases --alias-type redirect'
-docs-set-default = 'mike set-default --push --branch gh-pages'
+docs-deploy-pre = 'mike deploy -F docs/mkdocs.yml --push --branch gh-pages --update-aliases --alias-type redirect'
+docs-set-default-pre = 'mike set-default -F docs/mkdocs.yml --push --branch gh-pages'
 
 
 
