Add setup for Pixi environment action

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -114,14 +114,7 @@ jobs:
       # Set up the pixi package manager and install dependencies from pixi.toml.
       # Uses frozen lockfile to ensure reproducible builds.
       - name: Set up pixi
-        uses: prefix-dev/setup-pixi@v0.9.3
-        with:
-          environments: default
-          activate-environment: default
-          run-install: true
-          frozen: true
-          cache: false
-          post-cleanup: false
+        uses: ./.github/actions/setup-pixi
 
       # Install additional development dependencies (e.g., pre-commit hooks, dev tools).
       #- name: Install and setup development dependencies
