--- a/.github/actions/setup-pixi/action.yml
+++ b/.github/actions/setup-pixi/action.yml
@@ -1,10 +1,6 @@
 name: "Setup Pixi Environment"
 description: "Sets up pixi with common configuration"
 inputs:
-  version:
-    description: "Pixi version https://github.com/prefix-dev/setup-pixi"
-    required: false
-    default: "v0.9.0"
   environments:
     description: "Pixi environments to setup"
     required: false
@@ -37,7 +33,7 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - uses: prefix-dev/setup-pixi@${{ inputs.version }}
+    - uses: prefix-dev/setup-pixi@v0.9.0
       with:
         environments: ${{ inputs.environments }}
         activate-environment: ${{ inputs.activate-environment }}
