--- a/.github/actions/setup-easyscience-bot/action.yml
+++ b/.github/actions/setup-easyscience-bot/action.yml
@@ -1,5 +1,5 @@
-name: "Setup EasyScience bot"
-description: "Create a GitHub App installation token for easyscience[bot]"
+name: "Setup EasyScience bot for pushing"
+description: "Create GitHub App token and configure git identity + origin remote"
 inputs:
   app-id:
     description: "GitHub App ID"
@@ -23,8 +23,13 @@ runs:
         app-id: ${{ inputs.app-id }}
         private-key: ${{ inputs.private-key }}
 
-    - name: Configure git as easyscience[bot]
+    - name: Configure git for pushing
       shell: bash
       run: |
         git config user.name "easyscience[bot]"
         git config user.email "${{ inputs.app-id }}+easyscience[bot]@users.noreply.github.com"
+
+    - name: Configure origin remote to use the bot token
+      shell: bash
+      run: |
+        git remote set-url origin https://x-access-token:${{ steps.app-token.outputs.token }}@github.com/${{ github.repository }}.git
