Add PR label check, update workflow title

--- a/.github/workflows/release-notes.yaml
+++ b/.github/workflows/release-notes.yaml
@@ -36,7 +36,7 @@ jobs:
         uses: enhantica/drafterino@v2
         with:
           config: |
-            title: 'easydiffraction $COMPUTED_VERSION'
+            title: 'easypeasy $COMPUTED_VERSION'
             tag: 'v$COMPUTED_VERSION'
             note-template: '- $PR_TITLE (#$PR_NUMBER)'
 
