--- a/.github/workflows/release-notes.yaml
+++ b/.github/workflows/release-notes.yaml
@@ -24,8 +24,7 @@ jobs:
         with:
           fetch-depth: 0 # full history with tags to get the version number
 
-      - name: Set up pixi
-        uses: ./.github/actions/setup-pixi
+      - uses: ./.github/actions/setup-pixi
 
       - name: Install and setup development dependencies
         shell: bash
