Add dummy tutorial to docs navigation

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -170,5 +170,7 @@ nav:
       - User Guide: user-guide/index.md
   - Tutorials:
       - Tutorials: tutorials/index.md
+      - Getting Started:
+          - Dummy tutorial: tutorials/tutorial.ipynb
   - API Reference:
       - API Reference: api-reference/index.md
