--- a/.github/actions/publish-to-pypi/action.yaml
+++ b/.github/actions/publish-to-pypi/action.yaml
@@ -8,7 +8,6 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Publish distribution 📦 to PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
+    - uses: pypa/gh-action-pypi-publish@release/v1
       with:
         password: ${{ inputs.password }}
