--- a/.github/actions/setup-pixi/action.yaml
+++ b/.github/actions/setup-pixi/action.yaml
@@ -33,8 +33,7 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Set up pixi
-      uses: prefix-dev/setup-pixi@v0.9.3
+    - uses: prefix-dev/setup-pixi@v0.9.3
       with:
         environments: ${{ inputs.environments }}
         activate-environment: ${{ inputs.activate-environment }}
