--- a/.github/workflows/pypi-publish.yaml
+++ b/.github/workflows/pypi-publish.yaml
@@ -20,7 +20,8 @@ jobs:
         with:
           fetch-depth: 0 # full history with tags to get the version number by versioningit
 
-      - uses: ./.github/actions/setup-pixi
+      - name: Set up pixi
+        uses: ./.github/actions/setup-pixi
 
       - name: Install and setup development dependencies
         shell: bash
@@ -29,6 +30,7 @@ jobs:
       - name: Create Python package
         run: pixi run python -m build
 
-      - uses: ./.github/actions/publish-to-pypi
+      - name: Publish to PyPI
+        uses: ./.github/actions/publish-to-pypi
         with:
           password: ${{ secrets.PYPI_PASSWORD }}
