--- a/.github/workflows/tutorial-tests.yaml
+++ b/.github/workflows/tutorial-tests.yaml
@@ -40,7 +40,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v5
 
-      - uses: ./.github/actions/setup-pixi
+      - name: Set up pixi
+        uses: ./.github/actions/setup-pixi
 
       - name: Install and setup development dependencies
         shell: bash
