--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -107,7 +107,6 @@ jobs:
             pixi run --environment $env dev
             echo "PYTHONPATH:"
             pixi run printenv PYTHONPATH || true
-            pixi run --environment $env easydiffraction --version
           done
 
       - name: Run unit tests
@@ -160,7 +159,7 @@ jobs:
       - name: Upload Python package for the next job
         uses: actions/upload-artifact@v4
         with:
-          name: edl_${{ matrix.os }}_${{ runner.arch }}
+          name: easypeasy_${{ matrix.os }}_${{ runner.arch }}
           path: |
             dist/
             tests/
@@ -189,7 +188,7 @@ jobs:
           Download zipped Python package (incl. extra files) from previous job
         uses: actions/download-artifact@v4
         with: # name or path are taken from the upload step of the previous job
-          name: edl_${{ matrix.os }}_${{ runner.arch }}
+          name: easypeasy_${{ matrix.os }}_${{ runner.arch }}
           path: . # directory to extract downloaded zipped artifacts
 
       - name: Set up pixi
