Update Copier commit version

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -161,6 +161,7 @@ jobs:
         with:
           name: easypeasy_${{ matrix.os }}_${{ runner.arch }}
           path: |
+            .github/
             dist/
             tests/
             pytest.ini
