--- a/.github/workflows/tutorial-tests.yaml
+++ b/.github/workflows/tutorial-tests.yaml
@@ -43,9 +43,9 @@ jobs:
       - name: Set up pixi
         uses: ./.github/actions/setup-pixi
 
-      - name: Install and setup development dependencies
-        shell: bash
-        run: pixi run dev
+      #- name: Install and setup development dependencies
+      #  shell: bash
+      #  run: pixi run dev
 
       - name: Test tutorials as python scripts
         shell: bash
