--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -153,14 +153,11 @@ jobs:
 
       # More than one file/dir need to be specified in 'path', to preserve the
       # structure of the dist/ directory, not only its contents.
-      - uses: ./.github/actions/upload-artifact
+      - name: Upload package (incl. extras) for next job
+        uses: ./.github/actions/upload-artifact
         with:
           name: easypeasy_${{ matrix.os }}_${{ runner.arch }}
-          path: |
-            .github/
-            dist/
-            tests/
-            pytest.ini
+          path: dist/
 
   # Job 3: Test the package
   package-test:
@@ -174,11 +171,15 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v5
+
       - name: Download package (incl. extras) from previous job
         uses: ./.github/actions/download-artifact
         with:
-          # name should be taken from the upload step of the previous job
+          # name and path should be taken from the upload step of the previous job
           name: easypeasy_${{ matrix.os }}_${{ runner.arch }}
+          path: dist/
 
       - name: Set up pixi
         uses: ./.github/actions/setup-pixi
