--- a/.copier-answers.lib.yml
+++ b/.copier-answers.lib.yml
@@ -3,7 +3,7 @@
 _commit: v0.1.0-51-gd486b6d
 _src_path: gh:easyscience/templates-project-lib
 lib_docs_url: https://easyscience.github.io/peasy-lib
-lib_package_name: easypeasy
+lib_package_name: easydiffraction
 lib_python_max: '3.13'
 lib_python_min: '3.11'
 lib_repo_name: peasy-lib
