--- a/.github/workflows/tutorial-tests.yaml
+++ b/.github/workflows/tutorial-tests.yaml
@@ -66,8 +66,4 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Trigger dashboard build
-        uses: ./.github/actions/trigger-dashboard
-        with:
-          ref: ${{ env.CI_BRANCH }}
-          app-id: ${{ vars.EASYSCIENCE_APP_ID }}
-          private-key: ${{ secrets.EASYSCIENCE_APP_KEY }}
+        uses: ./.github/workflows/dashboard.yaml
