--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -268,19 +268,8 @@ jobs:
             cd ..
           done
 
-  # Job 4: Trigger dashboard build
-  dashboard-build-trigger:
+  # Job 4: Build and publish dashboard (reusable workflow)
+  run-reusable-workflows:
     needs: package-test # depend on previous job
-
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Check-out repository
-        uses: actions/checkout@v5
-
-      - name: Trigger dashboard build
-        uses: ./.github/actions/trigger-dashboard
-        with:
-          ref: ${{ env.CI_BRANCH }}
-          app-id: ${{ vars.EASYSCIENCE_APP_ID }}
-          private-key: ${{ secrets.EASYSCIENCE_APP_KEY }}
+    uses: ./.github/workflows/dashboard.yaml
+    secrets: inherit
