--- a/.github/workflows/backmerge.yaml
+++ b/.github/workflows/backmerge.yaml
@@ -36,6 +36,7 @@ jobs:
           fetch-depth: 0 # full history with tags
 
       - name: Setup easyscience[bot]
+        id: bot
         uses: ./.github/actions/setup-easyscience-bot
         with:
           app-id: ${{ vars.EASYSCIENCE_APP_ID }}
@@ -46,18 +47,23 @@ jobs:
           # Exit on error (-e), undefined vars (-u), and pipeline failures (pipefail)
           set -euo pipefail
 
-          # Get the tag name variable to be used in the commit message
-          TAG='${{ github.ref_name }}'
+          # Configure git with bot's identity 
+          git config user.name "easyscience[bot]"
+          git config user.email "${{ vars.EASYSCIENCE_APP_ID }}+easyscience[bot]@users.noreply.github.com"
+          git remote set-url origin "https://x-access-token:${{ steps.bot.outputs.token }}@github.com/${{ github.repository }}.git"
 
-          # Ensure local develop branch exists and is up-to-date with origin
-          git fetch origin develop:develop
+          # Get the tag name variable to be used in the commit message
+          TAG="${{ github.ref_name }}"
+
+          # Ensure local master and develop branches exist and are up-to-date with origin
+          git fetch origin master:master develop:develop
 
           # Switch to develop branch
           git checkout develop
 
           # Merge master into develop (no fast-forward to preserve history)
           # Use [skip ci] to avoid triggering CI - the code was already tested on master
-          git merge origin/master --no-ff -m "Backmerge: ${TAG} from master into develop [skip ci]"
+          git merge master --no-ff -m "Backmerge: ${TAG} from master into develop [skip ci]"
 
           # Push the merge commit to develop
           git push origin develop
