Standardize string quotes in YAML files

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -47,7 +47,7 @@ concurrency:
 env:
   CI_BRANCH: ${{ github.head_ref || github.ref_name }}
   PY_VERSIONS: '3.11 3.13'
-  PIXI_ENVS: "py-311-env py-313-env"
+  PIXI_ENVS: 'py-311-env py-313-env'
 
 jobs:
   # Job 1: Set up environment variables
